traq/widget-strip-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: widget-strip

spec:
  stripPrefix:
    prefixes:
      - /widget
