traq/es-stateful-set.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: traq-es

spec:
  serviceName: traq-es
  podManagementPolicy: Parallel
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: traq-es
  template:
    metadata:
      labels:
        app: traq-es
    spec:
      enableServiceLinks: false
      containers:
        - name: traq-es
          image: traq-es
          ports:
            - containerPort: 9200
              name: http
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/config/jvm.options.d/es_jvm.options
              name: config
              subPath: es_jvm.options
            - mountPath: /usr/share/elasticsearch/data
              name: data
      volumes:
        - name: config
          configMap:
            name: es-config
        - name: data
          hostPath:
            path: /srv/traq/data/es
      nodeSelector:
        kubernetes.io/hostname: moto-a1-3
