traq/frontend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traq-frontend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traq-frontend
  template:
    metadata:
      labels:
        app: traq-frontend
    spec:
      enableServiceLinks: false
      containers:
        - name: traq-frontend
          image: traq-ui
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            # traq-ui /startup.sh runs 'cp -r /app/override/* /usr/share/caddy', so '..data' symlinks are not copied
            # needs '-L' option: https://github.com/traPtitech/traQ_S-UI/pull/3888
            - mountPath: /app/override/config.js
              name: config
              subPath: config.js
      volumes:
        - name: config
          configMap:
            name: frontend-config
