traq/system-bot-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: system-bot

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: system-bot
  template:
    metadata:
      labels:
        app: system-bot
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      containers:
        - name: system-bot
          image: ghcr.io/traptitech/traq-system-bot:1.0.0
