traq/traq-stateful-set.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: traq

spec:
  serviceName: traq
  replicas: 1
  selector:
    matchLabels:
      app: traq
  template:
    metadata:
      labels:
        app: traq
    spec:
      containers:
        - name: traq
          image: ghcr.io/traptitech/traq:latest
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - mountPath: /app/config.yml
              name: config
              subPath: config.yml
            - mountPath: /keys
              name: keys
            - mountPath: /storage
              name: cache
      volumes:
        - name: config
          configMap:
            name: traq-config
        - name: keys
          secret:
            secretName: traq-keys
        - name: cache
          emptyDir: {}
