traq/widget-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traq-widget

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traq-widget
  template:
    metadata:
      labels:
        app: traq-widget
    spec:
      containers:
        - name: traq-frontend
          image: traq-widget
          ports:
            - containerPort: 80
              name: http
