traq/es-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traq-es

spec:
  type: ClusterIP
  ports:
    - targetPort: http
      name: http
      port: 9200
  selector:
    app: traq-es
