traq/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traq-frontend

spec:
  type: ClusterIP
  ports:
    - targetPort: http
      name: http
      port: 80
  selector:
    app: traq-frontend
