traq/traq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traq

spec:
  type: ClusterIP
  ports:
    - targetPort: http
      name: http
      port: 80
  selector:
    app: traq
